Src/LinearProgramming/Grammer.txt
<lp-application> ::= "Begin" <Sentence = Application Name> <RETURN> <lp-objective-function> <RETURN> <Subjects> "End"
<Sentence> ::= <Char> | <Char> <Sentence>
<Char> ::= ......
<RETURN> ::= ";" | EOL
<lp-objective-function> ::= <lp-Goal> ":" <Polynomial>
<lp-Goal> ::= "Min" | "Max"
<Polynomial> ::= <Monomial> | <Monomial> "+" <Polynomial>
<Monomial> ::= <SingleCharacter> | <Number> <SingleCharacter> | <Number> "*" <SingleCharacter>
<Number> ::= <Digit> | <Digit> <Number> 
<Digit> ::= 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
<Subjects> ::= "subject to:" "Begin" <RETURN> <Constraints> "End"
<Constraints> ::= <Constraint> | <Constraint><Constraints>
<Constraint> ::= <Polynomial> <Operator> <Polynomial>
<Operator> ::= "==" | ">" | "<" | "<=" | "=>"
